<resources>
    <string name="app_name">MVI</string>
    <string name="ok_upper">OK</string>
    <string name="exit">Выход</string>
    <string name="all">Все</string>
    <string name="double_back_pressed">Для выхода нажмите ещё раз</string>
    <string name="setting">Настройки</string>
    <string name="cancel">Отмена</string>
    <string name="warning">Внимание</string>
    <string name="error">Ошибка</string>

    <string name="db_backuped">Резервная копия БД сохранена</string>
    <string name="db_restored">БД восстановлена из резервной копии</string>

    <string name="fragment_open_account_transaction_friendly_name_subtitle">Наименование счета</string>
    <string name="fragment_open_account_transaction_friendly_name_hint">Например: "Текущий счет"</string>
    <string name="fragment_open_account_transaction_balance_subtitle">Баланс по счету</string>
    <string name="fragment_open_account_transaction_balance_value_hint">Например: 100000</string>
    <string name="fragment_open_account_transaction_action_button">Открыть счет</string>

    <string name="sort">Сортировать по ...</string>
    <string name="sort_default">По умолчанию</string>
    <string name="sort_name">По наименованию счета</string>
    <string name="sort_currency">По валюте счета</string>

    <string name="select">Выбрать по валюте</string>

    <string name="fragment_account_balance">Баланс</string>
    <string name="fragment_account_open_date_format">Открыт</string>
    <string name="fragment_account_transactions_subtitle">Курсы криптовалют</string>
    <string name="fragment_account_transfer">Переводы</string>

    <string name="network_disconnected">Сеть недоступна</string>
    <string name="location">Местоположение</string>
    <string name="search_hint">Найти</string>
    <string name="map">Карты</string>
    <string name="readme">Приложение является объединением архитектурных шаблонов VIPER и Service Locator</string>
    <string name="exchange_cryptorates">Курсы\nкрипто\nвалют</string>
    <string name="exchange_rates">Курсы\nвалют</string>
    <string name="news">Новости</string>
    <string name="contact_bank">Связь с\nбанком</string>
    <string name="address">Адреса</string>
    <string name="settings_show_screenshot">Разрешено играть музыку при старте</string>
    <string name="settings_orientattion">Ориентация экрана</string>
    <string name="orientation_system">Системная</string>
    <string name="orientation_portrait">Вертикальная</string>
    <string name="orientation_landscape">Горизонтальная</string>
    <string name="restart_location">Перегрузите устройство. Не работатает служба получения адреса</string>
    <string name="timeout_exit">Приложение вышло по таймауту</string>
    <string name="mail_error">Отсутствуют программы, осуществляющие посылку Email</string>
    <string name="setting_error">Отсутствует сохраненный файл настроек</string>
    <string name="setting_backup">Резервная копия настроек сохранена</string>
    <string name="setting_restore">Настройки восстановлены из резервной копии</string>

</resources>
