<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="44dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_dark"
            android:minHeight="@dimen/menu_header_height"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dimen_16dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xxlarge"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/below_shadow"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/balanceTitleView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_marginBottom="@dimen/dimen_16dp"
                    android:text="@string/fragment_account_balance"
                    android:textSize="@dimen/text_size_xlarge"/>

                <TextView
                    android:id="@+id/balanceView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_marginRight="@dimen/dimen_16dp"
                    android:layout_marginBottom="@dimen/dimen_16dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical|end"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/text_size_xlarge"
                    android:textStyle="bold"/>

            </LinearLayout>

            <TextView
                android:id="@+id/openDateView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:text="@string/fragment_account_open_date_format"
                android:textSize="@dimen/text_size_large"/>

        </LinearLayout>

        <View
            style="@style/HorizontalDivider"
            android:layout_height="0.5dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomSheetContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:behavior_peekHeight="@dimen/dimen_48dp"
        app:layout_behavior="shishkin.cleanarchitecture.mvi.common.LinearLayoutBehavior">

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/above_shadow"/>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:focusable="false"
            android:focusableInTouchMode="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/create_account"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/menu_height"
                    android:background="@drawable/side_menu_panel_selector"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/dimen_12dp"
                    android:paddingRight="@dimen/dimen_8dp"
                    android:text="@string/fragment_account_transfer"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_large"/>

                <View
                    style="@style/HorizontalGradientDivider"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
