<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark">

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            style="@style/HorizontalDivider"
            android:layout_height="0.5dp"
            android:background="@color/white_light"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_height"
            android:layout_gravity="center_vertical"
            android:background="@drawable/side_menu_panel_selector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_12dp"
            android:paddingRight="@dimen/dimen_12dp"
            android:text="Сообщения"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"/>

        <View
            style="@style/HorizontalDivider"
            android:layout_height="0.5dp"
            android:background="@color/white_light"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_height"
            android:layout_gravity="center_vertical"
            android:background="@drawable/side_menu_panel_selector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_12dp"
            android:paddingRight="@dimen/dimen_12dp"
            android:text="Настройки"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"/>

        <View
            style="@style/HorizontalDivider"
            android:layout_height="0.5dp"
            android:background="@color/white_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/exchange_rates"
                style="@style/SideMenuBottomButtonStyle"
                android:drawableTop="@drawable/ic_rates_white"
                android:gravity="center_horizontal"
                android:text="@string/exchange_rates"/>

            <TextView
                android:id="@+id/address"
                style="@style/SideMenuBottomButtonStyle"
                android:drawableTop="@drawable/ic_office_white"
                android:gravity="center"
                android:text="@string/address"/>

            <TextView
                android:id="@+id/contact_bank"
                style="@style/SideMenuBottomButtonStyle"
                android:drawableTop="@drawable/ic_contact_white"
                android:gravity="center"
                android:text="@string/contact_bank"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/side_menu_panel_selector"
            android:clickable="true"
            android:orientation="horizontal">

            <com.pkmmte.view.CircularImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_margin="@dimen/dimen_8dp"
                android:src="@drawable/shishkin"
                app:border="true"
                app:border_color="@color/white_light"
                app:border_width="2dp"
                app:shadow="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="left|center_vertical"
                android:text="Шишкин Олег Георгиевич"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large"/>

        </LinearLayout>

        <View
            style="@style/HorizontalDivider"
            android:layout_height="0.5dp"
            android:background="@color/white_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_header_height"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:text="$"
                    android:textColor="@color/white"
                    android:textSize="28sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Покупка 59.91"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_small"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Продажа 62.91"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_small"/>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:text="€"
                    android:textColor="@color/white"
                    android:textSize="28sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Покупка 73.96"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_small"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Продажа 76.96"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_small"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            style="@style/HorizontalDivider"
            android:layout_height="0.5dp"
            android:background="@color/white_light"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                style="@style/HorizontalDivider"
                android:layout_height="0.5dp"
                android:background="@color/white_light"/>

            <LinearLayout
                android:id="@+id/accounts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/side_menu_panel_selector"
                android:clickable="true"
                android:minHeight="@dimen/menu_header_height"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_12dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:layout_weight="1"
                    android:text="Счета"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_xlarge"
                    android:textStyle="bold"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/accounts_balance_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:layout_marginRight="@dimen/dimen_12dp"
                    android:layout_marginBottom="@dimen/dimen_4dp"/>

            </LinearLayout>

            <View
                style="@style/HorizontalDivider"
                android:layout_height="0.5dp"
                android:background="@color/white_light"/>

            <LinearLayout
                android:id="@+id/deposits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/side_menu_panel_selector"
                android:clickable="true"
                android:minHeight="@dimen/menu_header_height"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_12dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:text="Вклады"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_xlarge"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dimen_12dp"
                        android:gravity="right"
                        android:text="10945.92 $"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_xlarge"
                        android:textStyle="bold"/>
                </LinearLayout>

            </LinearLayout>

            <View
                style="@style/HorizontalDivider"
                android:layout_height="0.5dp"
                android:background="@color/white_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/side_menu_panel_selector"
                android:clickable="true"
                android:minHeight="@dimen/menu_header_height"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_12dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:text="Кредиты"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_xlarge"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dimen_12dp"
                        android:gravity="right"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size"/>
                </LinearLayout>

            </LinearLayout>

            <View
                style="@style/HorizontalDivider"
                android:layout_height="0.5dp"
                android:background="@color/white_light"/>

            <LinearLayout
                android:id="@+id/cards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/side_menu_panel_selector"
                android:clickable="true"
                android:minHeight="@dimen/menu_header_height"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_12dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:text="Карты"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_xlarge"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dimen_12dp"
                        android:gravity="right"
                        android:text="2 шт."
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_xlarge"
                        android:textStyle="bold"/>
                </LinearLayout>

            </LinearLayout>

            <View
                style="@style/HorizontalDivider"
                android:layout_height="0.5dp"
                android:background="@color/white_light"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>